--- a/FOC_demo.ioc
+++ b/FOC_demo.ioc
@@ -1,4 +1,43 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.ContinuousConvMode=ENABLE
+ADC1.EnableInjectedConversion=ENABLE
+ADC1.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T1_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,EnableInjectedConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjectedRank-2\#ChannelInjectedConversion,InjectedChannel-2\#ChannelInjectedConversion,Rank2_Channel,InjectedSamplingTime-2\#ChannelInjectedConversion,InjectedOffsetNumber-2\#ChannelInjectedConversion,InjectedRank-3\#ChannelInjectedConversion,InjectedChannel-3\#ChannelInjectedConversion,Rank3_Channel,InjectedSamplingTime-3\#ChannelInjectedConversion,InjectedOffsetNumber-3\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,ContinuousConvMode,CommonPathInternal
+ADC1.InjNumberOfConversion=3
+ADC1.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_1
+ADC1.InjectedChannel-2\#ChannelInjectedConversion=ADC_CHANNEL_2
+ADC1.InjectedChannel-3\#ChannelInjectedConversion=ADC_CHANNEL_3
+ADC1.InjectedOffsetNumber-1\#ChannelInjectedConversion=ADC_OFFSET_NONE
+ADC1.InjectedOffsetNumber-2\#ChannelInjectedConversion=ADC_OFFSET_NONE
+ADC1.InjectedOffsetNumber-3\#ChannelInjectedConversion=ADC_OFFSET_NONE
+ADC1.InjectedRank-1\#ChannelInjectedConversion=1
+ADC1.InjectedRank-2\#ChannelInjectedConversion=2
+ADC1.InjectedRank-3\#ChannelInjectedConversion=3
+ADC1.InjectedSamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC1.InjectedSamplingTime-2\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC1.InjectedSamplingTime-3\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank1_Channel=ADC_CHANNEL_1
+ADC1.Rank2_Channel=ADC_CHANNEL_2
+ADC1.Rank3_Channel=ADC_CHANNEL_3
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
+ADC2.CommonPathInternal=null|null|null|null
+ADC2.ContinuousConvMode=ENABLE
+ADC2.EnableInjectedConversion=ENABLE
+ADC2.EnableRegularConversion=DISABLE
+ADC2.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T1_TRGO
+ADC2.IPParameters=ContinuousConvMode,EnableInjectedConversion,EnableRegularConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjNumberOfConversion,ExternalTrigInjecConv,CommonPathInternal
+ADC2.InjNumberOfConversion=1
+ADC2.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_17
+ADC2.InjectedOffsetNumber-1\#ChannelInjectedConversion=ADC_OFFSET_NONE
+ADC2.InjectedRank-1\#ChannelInjectedConversion=1
+ADC2.InjectedSamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_12CYCLES_5
+ADC2.Rank1_Channel=ADC_CHANNEL_17
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -7,39 +46,46 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G473CBT6
 Mcu.Family=STM32G4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM1
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32G473C(B-C-E)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=VP_SYS_VS_tim4
-Mcu.Pin15=VP_SYS_VS_DBSignals
-Mcu.Pin16=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin17=VP_RealThread.X-CUBE-RT-Thread_Nano_VS_RTOSJjRTAaThread_4.1.1_4.1.1
+Mcu.Pin10=PB15
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA10
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
+Mcu.Pin18=VP_SYS_VS_tim4
+Mcu.Pin19=VP_SYS_VS_DBSignals
 Mcu.Pin2=PF0-OSC_IN
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_RealThread.X-CUBE-RT-Thread_Nano_VS_RTOSJjRTAaThread_4.1.1_4.1.1
 Mcu.Pin3=PF1-OSC_OUT
-Mcu.Pin4=PB13
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA8
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
-Mcu.PinsNb=18
+Mcu.Pin4=PA0
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA4
+Mcu.Pin8=PB13
+Mcu.Pin9=PB14
+Mcu.PinsNb=22
 Mcu.ThirdParty0=RealThread.X-CUBE-RT-Thread_Nano.4.1.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32G473CBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -57,11 +103,20 @@ NVIC.TIM4_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM4_IRQn
 NVIC.TimeBaseIP=TIM4
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
+PA1.Mode=IN2-Single-Ended
+PA1.Signal=ADC1_IN2
 PA10.Signal=S_TIM1_CH3
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=IN3-Single-Ended
+PA2.Signal=ADC1_IN3
+PA4.Locked=true
+PA4.Mode=IN17-Single-Ended
+PA4.Signal=ADC2_IN17
 PA8.Signal=S_TIM1_CH1
 PA9.Signal=S_TIM1_CH2
 PB13.Locked=true
@@ -122,7 +177,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.ADC345Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
